--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     }
     .product-card img {
       width: 100%;
+      height: 160px;
+      object-fit: cover;
       border-radius: 8px;
     }
     .product-title {
@@ -61,24 +63,38 @@
 
   <div class="products">
     <div class="product-card">
-      <img src="https://via.placeholder.com/250x150.png?text=Smart+Watch" alt="Smart Watch">
+      <img src="https://m.media-amazon.com/images/I/61BGE6iu4AL._AC_SL1500_.jpg" alt="Smart Watch">
       <div class="product-title">Smart Watch</div>
-      <div class="product-price">$49.99</div>
-      <a class="whatsapp-button" href="https://wa.me/yourwhatsapplink">Order on WhatsApp</a>
+      <div class="product-price">₹2,499</div>
+      <a class="whatsapp-button" href="https://wa.me/917510967182?text=I%20want%20to%20order%20the%20Smart%20Watch">Order on WhatsApp</a>
     </div>
 
     <div class="product-card">
-      <img src="https://via.placeholder.com/250x150.png?text=Wireless+Earbuds" alt="Wireless Earbuds">
+      <img src="https://m.media-amazon.com/images/I/51HBom8xz7L._AC_SL1200_.jpg" alt="Wireless Earbuds">
       <div class="product-title">Wireless Earbuds</div>
-      <div class="product-price">$29.99</div>
-      <a class="whatsapp-button" href="https://wa.me/yourwhatsapplink">Order on WhatsApp</a>
+      <div class="product-price">₹1,799</div>
+      <a class="whatsapp-button" href="https://wa.me/917510967182?text=I%20want%20to%20order%20Wireless%20Earbuds">Order on WhatsApp</a>
     </div>
 
     <div class="product-card">
-      <img src="https://via.placeholder.com/250x150.png?text=Bluetooth+Speaker" alt="Bluetooth Speaker">
+      <img src="https://m.media-amazon.com/images/I/71kX8GgGZ4L._AC_SL1500_.jpg" alt="Bluetooth Speaker">
       <div class="product-title">Bluetooth Speaker</div>
-      <div class="product-price">$39.99</div>
-      <a class="whatsapp-button" href="https://wa.me/yourwhatsapplink">Order on WhatsApp</a>
+      <div class="product-price">₹1,299</div>
+      <a class="whatsapp-button" href="https://wa.me/917510967182?text=I%20want%20to%20order%20the%20Bluetooth%20Speaker">Order on WhatsApp</a>
+    </div>
+
+    <div class="product-card">
+      <img src="https://m.media-amazon.com/images/I/61KzXogcbPL._AC_SL1500_.jpg" alt="Phone Tripod">
+      <div class="product-title">Phone Tripod Stand</div>
+      <div class="product-price">₹599</div>
+      <a class="whatsapp-button" href="https://wa.me/917510967182?text=I%20want%20to%20order%20the%20Phone%20Tripod">Order on WhatsApp</a>
+    </div>
+
+    <div class="product-card">
+      <img src="https://m.media-amazon.com/images/I/61vN1oszVlL._AC_SL1500_.jpg" alt="USB-C Charger">
+      <div class="product-title">USB-C Fast Charger</div>
+      <div class="product-price">₹699</div>
+      <a class="whatsapp-button" href="https://wa.me/917510967182?text=I%20want%20to%20order%20the%20USB-C%20Fast%20Charger">Order on WhatsApp</a>
     </div>
   </div>
 
